<resources>
    <string name="app_name">ChatApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Chat blank fragment</string>
</resources>
